--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,13 @@
 {
-  "extends": "next/core-web-vitals"
+	"parserOptions": {
+		"project": "./tsconfig.json"
+	},
+	"extends": ["ixn-next"],
+	"rules": {
+		"prettier/prettier": "off",
+
+		"no-console": "error",
+		"no-await-in-loop": "off",
+		"no-restricted-syntax": "off"
+	}
 }
