feat: change files view to use tanstack table+virtual

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,8 @@
 
 		"no-console": "error",
 		"no-await-in-loop": "off",
-		"no-restricted-syntax": "off"
+		"no-restricted-syntax": "off",
+
+		"react/no-unstable-nested-components": "off"
 	}
 }
