feat: access control

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,9 @@
 		"no-console": "error",
 		"no-await-in-loop": "off",
 		"no-restricted-syntax": "off",
+		"no-continue": "off",
+		"no-underscore-dangle": "off",
+		"max-classes-per-file": "off",
 
 		"react/no-unstable-nested-components": "off"
 	}
