--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,13 @@
 			"@/*": ["./*"]
 		}
 	},
-	"include": ["next-env.d.ts", "env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+	"include": [
+		"next-env.d.ts",
+		"env.d.ts",
+		"nextauth.d.ts",
+		"**/*.ts",
+		"**/*.tsx",
+		".next/types/**/*.ts"
+	],
 	"exclude": ["node_modules"]
 }
