feat: access control and authentication (#7)

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,16 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# secrets
+.env*
+!.env*.example
+
+# migrations
+migrations/*
+!migrations/*.ts
+!migrations/*.sql
+migrations/*.d.ts
+
+# wrangler
+.wrangler/state/v3/d1
