--- a/package.json
+++ b/package.json
@@ -12,16 +12,12 @@
 		"prettier:fix": "prettier --write . --ignore-path .gitignore",
 		"test": "echo \"No tests found\" && exit 0",
 		"pages:build": "npx @cloudflare/next-on-pages",
-		"pages:dev": "pnpm exec wrangler pages dev .vercel/output/static --compatibility-flag=nodejs_compat",
+		"pages:dev": "pnpm exec wrangler pages dev .vercel/output/static --compatibility-flag=nodejs_compat --r2=cloudy-demo",
 		"pages:deploy": "pnpm exec wrangler pages deploy .vercel/output/static",
 		"migrations:create": "tsx ./utils/db/migrations.ts create",
 		"migrations:compile": "tsx ./utils/db/migrations.ts compile",
 		"migrations:list": "pnpm exec wrangler d1 migrations list",
-		"migrations:apply": "pnpm exec wrangler d1 migrations apply",
-		"proxy": "pnpm exec cf-bindings-proxy --r2=cloudy-demo --d1=CLOUDY_D1_LOCAL --local",
-		"proxy:d1:execute": "pnpm exec wrangler d1 execute CLOUDY_D1_LOCAL --local --config=wrangler.dev.toml --command",
-		"proxy:migrations:list": "pnpm exec wrangler d1 migrations list CLOUDY_D1_LOCAL --local --config=wrangler.dev.toml",
-		"proxy:migrations:apply": "pnpm exec wrangler d1 migrations apply CLOUDY_D1_LOCAL --local --config=wrangler.dev.toml"
+		"migrations:apply": "pnpm exec wrangler d1 migrations apply"
 	},
 	"dependencies": {
 		"@auth/kysely-adapter": "^0.1.1",
@@ -31,9 +27,9 @@
 		"@tanstack/react-virtual": "3.0.0-beta.56",
 		"cf-bindings-proxy": "0.5.0",
 		"kysely": "^0.26.3",
-		"next": "13.4.19",
+		"next": "14.2.4",
 		"next-auth": "0.0.0-manual.ffd05533",
-		"next-safe-action": "^3.0.1",
+		"next-safe-action": "^7.1.3",
 		"next-themes": "^0.2.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
@@ -42,8 +38,8 @@
 		"zod": "^3.22.2"
 	},
 	"devDependencies": {
-		"@cloudflare/next-on-pages": "0.0.0-f764fff",
-		"@cloudflare/workers-types": "^4.20230821.0",
+		"@cloudflare/next-on-pages": "beta",
+		"@cloudflare/workers-types": "^4.20240620.0",
 		"@tsconfig/strictest": "^2.0.1",
 		"@types/node": "20.5.6",
 		"@types/react": "18.2.21",
@@ -52,14 +48,15 @@
 		"eslint": "8.48.0",
 		"eslint-config-ixn-next": "^1.4.5",
 		"eslint-config-next": "13.4.19",
+		"miniflare": "^3.20240701.0",
 		"postcss": "8.4.28",
 		"prettier": "^3.0.2",
 		"prettier-plugin-tailwindcss": "^0.5.3",
 		"tailwindcss": "3.3.3",
 		"tsx": "^3.12.7",
 		"typescript": "5.2.2",
-		"vercel": "^32.1.0",
-		"wrangler": "^3.6.0"
+		"vercel": "^32.4.1",
+		"wrangler": "^3.63.0"
 	},
 	"pnpm": {
 		"overrides": {
